Refactor everything, use new ways...
-=david=-